--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  riverpod: ^2.6.1
+  hooks_riverpod: ^2.6.1
+  auto_route: ^10.1.0+1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
