--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   hooks_riverpod: ^2.6.1
   auto_route: ^10.1.0+1
   riverpod_annotation: ^2.6.1
+  phosphor_flutter: ^2.1.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
