--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   phosphor_flutter: ^2.1.0
   flutter_riverpod: ^2.6.1
+  google_fonts: ^6.3.0
 
 dev_dependencies:
   flutter_test:
