--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hooks_riverpod: ^2.6.1
   auto_route: ^10.1.0+1
   riverpod_annotation: ^2.6.1
+  speech_to_text: ^7.3.0
 
 dev_dependencies:
   flutter_test:
