--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   speech_to_text: ^7.3.0
   flutter_tts: ^3.8.0
+  dio: ^5.5.0+1
 
 dev_dependencies:
   flutter_test:
