--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   phosphor_flutter: ^2.1.0
   flutter_riverpod: ^2.6.1
   speech_to_text: ^7.3.0
+  smooth_page_indicator: ^1.2.1
+  lottie: ^3.3.1
+  flutter_hooks: ^0.21.3
+  shared_preferences: ^2.5.3
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
