--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   dio: ^5.5.0+1
   just_audio: ^0.9.40
   flutter_native_splash: ^2.4.6
+  shared_preferences: ^2.5.3
+  lottie: ^3.3.1
+  smooth_page_indicator: ^1.2.1
+  flutter_hooks: ^0.21.3
 
 dev_dependencies:
   flutter_test:
@@ -74,11 +78,7 @@ flutter:
   assets:
     - lib/mock/questions.json
     - lib/mock/phrase_book_items.json
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
